# recon-buddy-ai

./: .env.example  .gitignore  LICENSE  README.md  UnifiedRecon.py  log_config.py  main.py  pyproject.toml  requirements.txt
modules/: __init__.py  ai_summarizer.py  dns_module.py  history.py  notifiers.py  reporter.py  scanner.py  shodan_module.py  vuln_lookup.py
